--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html{
         word-wrap: break-word;
         text-align:center;
         position: absolute;
-        margin: 0 1rem;
+        margin: 10px 1rem 0;
     }
     .texto-vertical:last-of-type{
         top: 0;
@@ -60,14 +60,18 @@ html{
         font-family: 'Coda Caption', sans-serif;
         color: #212529;
     }
+    .btn-prota{
+        width: auto;
+        height: auto;
+    }
     .img-prota{
-        height: 95vh;
-        max-height: 95vh;
+        height: 100vh;
+        width: 15vw;
         filter: grayscale(1);
         transition: 0.5s ease-in-out all;
         transform: scale(0.97);
         border-radius: 2rem;
-        margin: 0rem;
+        margin: auto;
     }
     .img-prota:hover{
         transition: 0.5s ease-in-out all;
